player audio 추가

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ Assets/Settings
 Assets/TextMesh Pro
 Assets/Polygonmaker
 Assets/Blood & Slashes
+Assets/polyperfect
+Assets/polyperfect.meta
+Assets/Monster
+Assets/Monster.meta
