--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ Assets/polyperfect
 Assets/polyperfect.meta
 Assets/Monster
 Assets/Monster.meta
+Assets/ShaderGraph_Dissolve
+Assets/ShaderGraph_Dissolve.meta
