gun recoil func

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ Assets/Monster
 Assets/Monster.meta
 Assets/ShaderGraph_Dissolve
 Assets/ShaderGraph_Dissolve.meta
+Assets/LowPolyDungeonsLite
+Assets/LowPolyDungeonsLite.meta
