--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,5 @@ Assets/ShaderGraph_Dissolve
 Assets/ShaderGraph_Dissolve.meta
 Assets/LowPolyDungeonsLite
 Assets/LowPolyDungeonsLite.meta
+Assets/DarkPixelRPGUI
+Assets/DarkPixelRPGUI.meta
