--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ Assets/LowPolyDungeonsLite
 Assets/LowPolyDungeonsLite.meta
 Assets/DarkPixelRPGUI
 Assets/DarkPixelRPGUI.meta
+Assets/Chest Object
+Assets/Chest Object.meta
